--- a/index.html
+++ b/index.html
@@ -1,67 +1,39 @@
 <html>
- <head>
- <meta charset="utf-8">
- </head>
+<head>
+<link rel="Stylesheet" type="text/css" href="style.css" />
+<META HTTP-EQUIV="content-type" CONTENT="text/html; CHARSET=UTF-8">
+</head>
 <body>
- <table width=95% border="1" align="center">
+<table width=95% border="2" align="center">
  <tr>
-	<td colspan="3">
-		<iframe scrolling="no" width=100% height=100 name="obszar_logo" src="logoCzec.html" border="0"></iframe>
-		</td>
+ <td width=18% align=left>
+ <marquee bgcolor="turcuise"> Czeczora </marquee>
+ 
+ 17_1)&nbsp&nbsp <a href="zadanie17_p1_czec.html" target="strony">zad17 przykład 1</a>
+ <br>  
+ 17_2)&nbsp&nbsp <a href="zadanie17_p2_czec.html" target="strony">zad17 przykład 2</a>
+ <br> 
+ <br> 
+ 19)&nbsp&nbsp <a href="zadanie19_czec.html" target="strony">zad19</a>
+ <br> 
+ 20)&nbsp&nbsp <a href="zadanie20_czec.html" target="strony">zad20</a>
+ <br> 
+ </td>
+ <td align=center><iframe width=850 height=750 name="strony" src="start.html" border="1"></iframe>
+ </td>
+ <td width=18% align=left><a href="start.html" target="strony"><center>Start</center></a><br><br>
+
+ 17_1)&nbsp&nbsp<a href="zadanie17_p1_kod_czec.html" target="strony">Z17 przykład 1 kod </a>
+ <br>
+ 17_2)&nbsp&nbsp<a href="zadanie17_p2_kod_czec.html" target="strony">Z17 przykład 2 kod </a>
+ <br>
+ <br>
+ 19)&nbsp&nbsp<a href="zadanie19_kod_czec.html" target="strony">Z19 kod </a>
+<br>
+ 20)&nbsp&nbsp<a href="zadanie20_kod_czec.html" target="strony">Z20 kod </a>
+ <br>
+ </td>
  </tr>
- <tr>
-	<td width=18% align="center">
-		<b>lewe menu</b>
-		<ul>
-		<li>
-		<a href="czec_z5_1.html" target="obszar_glowny">Z5-importowany</a>
-		</li>
-		<li>
-		<a href="czec_z5_2.html" target="obszar_glowny">Z5-zewnętrzny</a>
-	</li>
-	<li>
-		<a href="czec_z5_3.html" target="obszar_glowny">Z5-wewnętrzna</a>
-	</li>
-	<li>
-		<a href="czec_z5_4.html" target="obszar_glowny">Z5-liniowy</a>
-	</li>
-</ul>
-</td>
- <td align=center>
-    <iframe width=100% height=750 name="obszar_glowny" src="glowny_czeczora.html" border="0"></iframe>
-    </td>
-	<td width=18% align="center">
-		<map name="nazwa mapy">
-			<area shape="rect" coords="13,7,79,43" href="zdjecie_do_pobrania.zip">
-			<area shape="rect" coords="13,52,79,87" href="tabela_czeczora.html" target="obszar_glowny">
-			<area shape="circle" coords="47,122,26" href="formularz_czeczora.html" target="obszar_glowny">
-			<area shape="poly" coords="47,155,76,212,18,212" href="https://profil.wp.pl/login/login.html">
-			<area shape="rect" coords="10,231,83,274" href="z1_z6_czeczora.html" target="obszar_glowny">
-		   </map>
-		   <b>prawe menu</b>
-		<ul>
-		<li>
-		<a href="czec_z5_1_kod.html" target="obszar_glowny">Z5-importowany kod</a>
-		</li>
-		<li>
-		<a href="czec_z5_2_kod.html" target="obszar_glowny">Z5-zewnętrzny kod</a>
-	</li>
-	<li>
-		<a href="czec_z5_3_kod.html" target="obszar_glowny">Z5-wewnętrzna kod</a>
-	</li>
-	<li>
-		<a href="czec_z5_4_kod.html" target="obszar_glowny">Z5-liniowy kod</a>
-	</li>
-</ul>
-		</td>
- </tr>
- <td width=18% align="center">
-	
- <tr>
-	<td colspan="3">
-		<iframe scrolling="no" width=100% height=90 name="obszar_stopka" src="stopka_czeczora_1.html" border="0"></iframe>
-		</td>
- </tr>
- </table>
+</table>
 </body>
 </html>
